removed /image folder

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <!-- ACTIVITIES SECTION -->
         <div class="activities-section">
             <h3 id="h3">Explore Ancient Ruins, Indulge in Vibrant Cuisine, and Relax on Pristine Beaches: Mexico's Top Experiences Await</h3>
-            <img class="activities-img" src="images/PHOTO-2021-12-06-13-08-25.jpg">
-            <img class="activities-img" src="images/mexican-food.jpeg">
-            <img class="activities-img" src="images/HERO-shutterstock_604913387.jpg">
+            <img class="activities-img" src="PHOTO-2021-12-06-13-08-25.jpg">
+            <img class="activities-img" src="mexican-food.jpeg">
+            <img class="activities-img" src="HERO-shutterstock_604913387.jpg">
         </div>
 
         <!-- GUIDE SECTION -->
         
         <div class="guide-section">
             <img
-                src="images/downhill-alamos.jpg"
+                src="downhill-alamos.jpg"
                 alt="Paul riding bike" class="downhill-img">
             <div>
                 <p>"Allow me to guide you through the very best this incredible country has to offer."</p>
